--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
       #map {
         height: 100%;
       }
+      #pac-input {
+  background-color: #fff;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 300px;
+}
+
     </style>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_0y0IHfUpza1AX8MYNL1ThEEkrCYMMMY&signed_in=true&libraries=places&callback=initMap" async defer></script>
       
