--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ function createGoodMarker(place) {
   var placeLoc = place.geometry.location;
   var marker = new google.maps.Marker({
     map: map,
+    clickable: false,
     position: place.geometry.location,
     icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
   });
